--- a/simple-todo-list/todo-service/build.gradle
+++ b/simple-todo-list/todo-service/build.gradle
@@ -1,12 +1,21 @@
+
+buildscript {
+	ext {
+		springBootVersion = '3.4.0'
+		springBootGrpcVersion = '3.1.0.RELEASE'
+	}
+
+
+}
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.0'
 	id 'io.spring.dependency-management' version '1.1.6'
 }
+apply plugin: 'idea'
 
 group = 'com.nagaraj.projects'
 version = '0.0.1-SNAPSHOT'
-
 java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(17)
@@ -18,7 +27,13 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation("net.devh:grpc-server-spring-boot-starter:${springBootGrpcVersion}")
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation group: 'com.google.api.grpc', name: 'proto-google-common-protos', version: '2.49.0'
+	compileOnly 'org.projectlombok:lombok'
+	runtimeOnly 'com.h2database:h2'
+	implementation project(":protobuf")
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
