--- a/simple-todo-list/todo-service/build.gradle
+++ b/simple-todo-list/todo-service/build.gradle
@@ -31,7 +31,9 @@ dependencies {
 	implementation("net.devh:grpc-server-spring-boot-starter:${springBootGrpcVersion}")
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation group: 'com.google.api.grpc', name: 'proto-google-common-protos', version: '2.49.0'
+	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	implementation project(":protobuf")
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
